--- a/module-1/lab-list-comprehensions/your-code/main.ipynb
+++ b/module-1/lab-list-comprehensions/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,10 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst1=[i+1 for i in range(50)]\n",
+    "print (lst1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,10 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100, 102, 104, 106, 108, 110, 112, 114, 116, 118, 120, 122, 124, 126, 128, 130, 132, 134, 136, 138, 140, 142, 144, 146, 148, 150, 152, 154, 156, 158, 160, 162, 164, 166, 168, 170, 172, 174, 176, 178, 180, 182, 184, 186, 188, 190, 192, 194, 196, 198, 200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst2=[i for i in range(2,201) if i%2==0]\n",
+    "print (lst2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,10 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.48006452, 0.7876326, 0.77109654, 0.44409793, 0.09014516, 0.81835917, 0.87645456, 0.7066597, 0.09610873, 0.41247947, 0.57433389, 0.29960807, 0.42315023, 0.34452557, 0.4751035, 0.17003563, 0.46843998, 0.92796258, 0.69814654, 0.41290051, 0.19561071, 0.16284783, 0.97016248, 0.71725408, 0.87702738, 0.31244595, 0.76615487, 0.20754036, 0.57871812, 0.07214068, 0.40356048, 0.12149553, 0.53222417, 0.9976855, 0.12536346, 0.80930099, 0.50962849, 0.94555126, 0.33364763]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst3=[y for x in a for y in x]\n",
+    "print (lst3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,10 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.84062117, 0.7876326, 0.77109654, 0.81835917, 0.87645456, 0.7066597, 0.57433389, 0.92796258, 0.69814654, 0.97016248, 0.71725408, 0.87702738, 0.76615487, 0.57871812, 0.53222417, 0.9976855, 0.80930099, 0.50962849, 0.94555126]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst4=[y for x in a for y in x if y >= 0.5]\n",
+    "print (lst4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,10 +169,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.55867166, 0.06210792, 0.08147297, 0.82579068, 0.91512478, 0.06833034, 0.05440634, 0.65857693, 0.30296619, 0.06769833, 0.96031863, 0.51293743, 0.09143215, 0.71893382, 0.45850679, 0.58256464, 0.59005654, 0.56266457, 0.71600294, 0.87392666, 0.11434044, 0.8694668, 0.65669313, 0.10708681, 0.07529684, 0.46470767, 0.47984544, 0.65368638, 0.14901286, 0.23760688]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst5=[z for x in b for y in x for z in y]\n",
+    "print (lst5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,10 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.55867166, 0.82579068, 0.91512478, 0.65857693, 0.96031863, 0.51293743, 0.71893382, 0.58256464, 0.59005654, 0.56266457, 0.71600294, 0.87392666, 0.8694668, 0.65669313, 0.65368638]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst6=[z for x in b for y in x for z in y if z > 0.5]\n",
+    "print (lst6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,10 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sample_file_6.csv', 'sample_file_2.csv', 'sample_file_5.csv', 'sample_file_4.csv', 'sample_file_7.csv', 'sample_file_8.csv', 'sample_file_9.csv', 'sample_file_3.csv', 'sample_file_1.csv', 'sample_file_0.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_lst=[f for f in os.listdir('../data') if f.endswith('.csv')]\n",
+    "print (file_lst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,13 +244,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.702566</td>\n",
+       "      <td>0.092336</td>\n",
+       "      <td>0.245083</td>\n",
+       "      <td>0.918402</td>\n",
+       "      <td>0.695110</td>\n",
+       "      <td>0.886921</td>\n",
+       "      <td>0.588605</td>\n",
+       "      <td>0.950970</td>\n",
+       "      <td>0.168079</td>\n",
+       "      <td>0.783107</td>\n",
+       "      <td>0.698836</td>\n",
+       "      <td>0.120857</td>\n",
+       "      <td>0.207432</td>\n",
+       "      <td>0.824789</td>\n",
+       "      <td>0.349212</td>\n",
+       "      <td>0.818606</td>\n",
+       "      <td>0.376941</td>\n",
+       "      <td>0.886644</td>\n",
+       "      <td>0.472826</td>\n",
+       "      <td>0.551858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.177005</td>\n",
+       "      <td>0.649551</td>\n",
+       "      <td>0.467321</td>\n",
+       "      <td>0.449597</td>\n",
+       "      <td>0.458872</td>\n",
+       "      <td>0.815586</td>\n",
+       "      <td>0.455132</td>\n",
+       "      <td>0.729812</td>\n",
+       "      <td>0.998528</td>\n",
+       "      <td>0.048724</td>\n",
+       "      <td>0.377391</td>\n",
+       "      <td>0.729498</td>\n",
+       "      <td>0.721515</td>\n",
+       "      <td>0.566724</td>\n",
+       "      <td>0.338366</td>\n",
+       "      <td>0.877239</td>\n",
+       "      <td>0.129824</td>\n",
+       "      <td>0.773155</td>\n",
+       "      <td>0.485385</td>\n",
+       "      <td>0.686294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.689556</td>\n",
+       "      <td>0.445586</td>\n",
+       "      <td>0.005691</td>\n",
+       "      <td>0.150171</td>\n",
+       "      <td>0.554146</td>\n",
+       "      <td>0.492320</td>\n",
+       "      <td>0.185612</td>\n",
+       "      <td>0.060855</td>\n",
+       "      <td>0.457443</td>\n",
+       "      <td>0.847337</td>\n",
+       "      <td>0.603072</td>\n",
+       "      <td>0.346574</td>\n",
+       "      <td>0.898464</td>\n",
+       "      <td>0.482963</td>\n",
+       "      <td>0.443979</td>\n",
+       "      <td>0.430132</td>\n",
+       "      <td>0.713078</td>\n",
+       "      <td>0.302786</td>\n",
+       "      <td>0.051382</td>\n",
+       "      <td>0.203699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.047188</td>\n",
+       "      <td>0.854596</td>\n",
+       "      <td>0.833368</td>\n",
+       "      <td>0.043878</td>\n",
+       "      <td>0.883505</td>\n",
+       "      <td>0.786302</td>\n",
+       "      <td>0.980916</td>\n",
+       "      <td>0.004030</td>\n",
+       "      <td>0.619601</td>\n",
+       "      <td>0.547769</td>\n",
+       "      <td>0.160962</td>\n",
+       "      <td>0.545281</td>\n",
+       "      <td>0.931623</td>\n",
+       "      <td>0.991855</td>\n",
+       "      <td>0.821099</td>\n",
+       "      <td>0.654592</td>\n",
+       "      <td>0.346710</td>\n",
+       "      <td>0.183948</td>\n",
+       "      <td>0.372739</td>\n",
+       "      <td>0.739383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.936065</td>\n",
+       "      <td>0.725831</td>\n",
+       "      <td>0.184239</td>\n",
+       "      <td>0.677391</td>\n",
+       "      <td>0.242726</td>\n",
+       "      <td>0.125457</td>\n",
+       "      <td>0.356254</td>\n",
+       "      <td>0.937350</td>\n",
+       "      <td>0.215774</td>\n",
+       "      <td>0.212762</td>\n",
+       "      <td>0.483018</td>\n",
+       "      <td>0.573162</td>\n",
+       "      <td>0.634487</td>\n",
+       "      <td>0.423924</td>\n",
+       "      <td>0.394633</td>\n",
+       "      <td>0.766967</td>\n",
+       "      <td>0.606719</td>\n",
+       "      <td>0.538712</td>\n",
+       "      <td>0.885516</td>\n",
+       "      <td>0.667051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.948664</td>\n",
+       "      <td>0.215285</td>\n",
+       "      <td>0.918270</td>\n",
+       "      <td>0.599951</td>\n",
+       "      <td>0.755120</td>\n",
+       "      <td>0.971609</td>\n",
+       "      <td>0.103190</td>\n",
+       "      <td>0.194754</td>\n",
+       "      <td>0.932388</td>\n",
+       "      <td>0.591727</td>\n",
+       "      <td>0.697517</td>\n",
+       "      <td>0.607355</td>\n",
+       "      <td>0.177649</td>\n",
+       "      <td>0.435968</td>\n",
+       "      <td>0.202404</td>\n",
+       "      <td>0.979777</td>\n",
+       "      <td>0.095713</td>\n",
+       "      <td>0.159040</td>\n",
+       "      <td>0.651457</td>\n",
+       "      <td>0.803393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.163236</td>\n",
+       "      <td>0.803926</td>\n",
+       "      <td>0.916655</td>\n",
+       "      <td>0.775234</td>\n",
+       "      <td>0.644890</td>\n",
+       "      <td>0.701362</td>\n",
+       "      <td>0.910208</td>\n",
+       "      <td>0.871204</td>\n",
+       "      <td>0.321745</td>\n",
+       "      <td>0.586035</td>\n",
+       "      <td>0.887054</td>\n",
+       "      <td>0.240060</td>\n",
+       "      <td>0.915342</td>\n",
+       "      <td>0.205310</td>\n",
+       "      <td>0.489504</td>\n",
+       "      <td>0.848926</td>\n",
+       "      <td>0.304342</td>\n",
+       "      <td>0.358977</td>\n",
+       "      <td>0.841539</td>\n",
+       "      <td>0.964889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.934136</td>\n",
+       "      <td>0.031410</td>\n",
+       "      <td>0.954057</td>\n",
+       "      <td>0.853387</td>\n",
+       "      <td>0.642160</td>\n",
+       "      <td>0.681184</td>\n",
+       "      <td>0.317198</td>\n",
+       "      <td>0.875259</td>\n",
+       "      <td>0.538416</td>\n",
+       "      <td>0.867511</td>\n",
+       "      <td>0.813309</td>\n",
+       "      <td>0.215624</td>\n",
+       "      <td>0.552062</td>\n",
+       "      <td>0.498378</td>\n",
+       "      <td>0.739656</td>\n",
+       "      <td>0.307914</td>\n",
+       "      <td>0.233996</td>\n",
+       "      <td>0.602166</td>\n",
+       "      <td>0.244210</td>\n",
+       "      <td>0.313071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.757038</td>\n",
+       "      <td>0.918964</td>\n",
+       "      <td>0.475459</td>\n",
+       "      <td>0.837686</td>\n",
+       "      <td>0.149645</td>\n",
+       "      <td>0.819032</td>\n",
+       "      <td>0.611996</td>\n",
+       "      <td>0.644348</td>\n",
+       "      <td>0.938444</td>\n",
+       "      <td>0.410444</td>\n",
+       "      <td>0.561513</td>\n",
+       "      <td>0.499231</td>\n",
+       "      <td>0.856437</td>\n",
+       "      <td>0.054619</td>\n",
+       "      <td>0.326310</td>\n",
+       "      <td>0.461825</td>\n",
+       "      <td>0.954783</td>\n",
+       "      <td>0.361873</td>\n",
+       "      <td>0.145952</td>\n",
+       "      <td>0.873029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.263455</td>\n",
+       "      <td>0.816283</td>\n",
+       "      <td>0.336707</td>\n",
+       "      <td>0.587997</td>\n",
+       "      <td>0.285871</td>\n",
+       "      <td>0.619942</td>\n",
+       "      <td>0.018027</td>\n",
+       "      <td>0.548845</td>\n",
+       "      <td>0.121471</td>\n",
+       "      <td>0.194299</td>\n",
+       "      <td>0.149844</td>\n",
+       "      <td>0.848866</td>\n",
+       "      <td>0.531840</td>\n",
+       "      <td>0.663384</td>\n",
+       "      <td>0.084884</td>\n",
+       "      <td>0.120312</td>\n",
+       "      <td>0.463214</td>\n",
+       "      <td>0.437889</td>\n",
+       "      <td>0.542376</td>\n",
+       "      <td>0.668447</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5         6  \\\n",
+       "0  0.702566  0.092336  0.245083  0.918402  0.695110  0.886921  0.588605   \n",
+       "1  0.177005  0.649551  0.467321  0.449597  0.458872  0.815586  0.455132   \n",
+       "2  0.689556  0.445586  0.005691  0.150171  0.554146  0.492320  0.185612   \n",
+       "3  0.047188  0.854596  0.833368  0.043878  0.883505  0.786302  0.980916   \n",
+       "4  0.936065  0.725831  0.184239  0.677391  0.242726  0.125457  0.356254   \n",
+       "0  0.948664  0.215285  0.918270  0.599951  0.755120  0.971609  0.103190   \n",
+       "1  0.163236  0.803926  0.916655  0.775234  0.644890  0.701362  0.910208   \n",
+       "2  0.934136  0.031410  0.954057  0.853387  0.642160  0.681184  0.317198   \n",
+       "3  0.757038  0.918964  0.475459  0.837686  0.149645  0.819032  0.611996   \n",
+       "4  0.263455  0.816283  0.336707  0.587997  0.285871  0.619942  0.018027   \n",
+       "\n",
+       "          7         8         9        10        11        12        13  \\\n",
+       "0  0.950970  0.168079  0.783107  0.698836  0.120857  0.207432  0.824789   \n",
+       "1  0.729812  0.998528  0.048724  0.377391  0.729498  0.721515  0.566724   \n",
+       "2  0.060855  0.457443  0.847337  0.603072  0.346574  0.898464  0.482963   \n",
+       "3  0.004030  0.619601  0.547769  0.160962  0.545281  0.931623  0.991855   \n",
+       "4  0.937350  0.215774  0.212762  0.483018  0.573162  0.634487  0.423924   \n",
+       "0  0.194754  0.932388  0.591727  0.697517  0.607355  0.177649  0.435968   \n",
+       "1  0.871204  0.321745  0.586035  0.887054  0.240060  0.915342  0.205310   \n",
+       "2  0.875259  0.538416  0.867511  0.813309  0.215624  0.552062  0.498378   \n",
+       "3  0.644348  0.938444  0.410444  0.561513  0.499231  0.856437  0.054619   \n",
+       "4  0.548845  0.121471  0.194299  0.149844  0.848866  0.531840  0.663384   \n",
+       "\n",
+       "         14        15        16        17        18        19  \n",
+       "0  0.349212  0.818606  0.376941  0.886644  0.472826  0.551858  \n",
+       "1  0.338366  0.877239  0.129824  0.773155  0.485385  0.686294  \n",
+       "2  0.443979  0.430132  0.713078  0.302786  0.051382  0.203699  \n",
+       "3  0.821099  0.654592  0.346710  0.183948  0.372739  0.739383  \n",
+       "4  0.394633  0.766967  0.606719  0.538712  0.885516  0.667051  \n",
+       "0  0.202404  0.979777  0.095713  0.159040  0.651457  0.803393  \n",
+       "1  0.489504  0.848926  0.304342  0.358977  0.841539  0.964889  \n",
+       "2  0.739656  0.307914  0.233996  0.602166  0.244210  0.313071  \n",
+       "3  0.326310  0.461825  0.954783  0.361873  0.145952  0.873029  \n",
+       "4  0.084884  0.120312  0.463214  0.437889  0.542376  0.668447  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data_set = pd.concat([pd.read_csv('../data/' + f) for f in file_lst], axis=0)\n",
+    "\n",
+    "display(data_set[:10])\n"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "### 8. Use a list comprehension to select and print the column numbers for columns from the data set whose median is less than 0.48."
@@ -181,10 +582,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2', '9', '12', '14', '17']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_set2=[x for x in data_set if data_set[x].median(axis = 0) < 0.48 ]\n",
+    "print (data_set2)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,7 +613,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_set2=[x for x in data_set for y in x  if data_set[x].median(axis = 0) < 0.48 ]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
