--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup = ('I',)\n",
+    "print(tup)\n",
+    "type(tup)\n"
    ]
   },
   {
@@ -33,11 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "type(tup)\n"
    ]
   },
   {
@@ -55,13 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-59-f586df4feeee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"o\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "tup = ()\n",
+    "tup.append (\"r\",\"o\")\n",
+    "print(tup)\n",
     "\n",
-    "# Your explanation here\n"
+    "\n",
+    "# NO SE PUEDE HACER POR ESTO: Las tuplas no tienen el atributo append\n",
+    "# AttributeError: 'tuple' object has no attribute 'append'\n"
    ]
   },
   {
@@ -79,13 +126,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "tup = (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "print(tup)\n",
+    "type(tup)\n",
     "\n",
-    "# Your explanation here\n"
+    "# I am able to do it, yes"
    ]
   },
   {
@@ -103,11 +170,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup1 = tup[:4]\n",
+    "print(tup1)\n",
+    "\n",
+    "tup2 = tup [-4:]\n",
+    "print(tup2)\n"
    ]
   },
   {
@@ -121,11 +201,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+      "Genial\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3 = tup1 + tup2\n",
+    "print (tup3)\n",
+    "\n",
+    "if tup3 == tup:\n",
+    "    print(\"Genial\")\n",
+    "else:\n",
+    "    print (\"No,sorry\")\n",
+    "    \n"
    ]
   },
   {
@@ -137,11 +233,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n",
+      "8\n",
+      "Éxito\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(len(tup1))\n",
+    "print(len(tup2))\n",
+    "\n",
+    "a = len(tup1 + tup2)\n",
+    "print(a)\n",
+    "\n",
+    "if a == len(tup3):\n",
+    "    print(\"Éxito\")\n",
+    "else:\n",
+    "    print(\"No son iguales. Socorro\")"
    ]
   },
   {
@@ -153,11 +269,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup3.index(\"h\")\n"
    ]
   },
   {
@@ -177,11 +304,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for x in letters:\n",
+    "    if x in tup3:\n",
+    "        print(\"True\")\n",
+    "    else:\n",
+    "        print(\"False\")\n",
+    "        "
    ]
   },
   {
@@ -195,12 +341,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La letra a se repite 1 veces\n",
+      "La letra b se repite 0 veces\n",
+      "La letra c se repite 1 veces\n",
+      "La letra d se repite 0 veces\n",
+      "La letra e se repite 0 veces\n"
+     ]
+    }
+   ],
+   "source": [
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "tup3 = ('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+    "\n",
+    "for x in letters:\n",
+    "    a = tup3.count(x)\n",
+    "    \n",
+    "    print(\"La letra {} se repite {} veces\".format(x,a)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
