--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
+    "import random\n",
+    "from random import sample"
    ]
   },
   {
@@ -38,11 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[46, 30, 45, 15, 42, 95, 6, 84, 98, 28, 76, 75, 79, 44, 85, 8, 66, 26, 97, 32, 33, 3, 12, 88, 21, 65, 23, 49, 19, 4, 86, 67, 52, 14, 99, 94, 90, 74, 64, 87, 39, 9, 68, 71, 37, 81, 60, 93, 96, 2, 24, 58, 16, 69, 50, 70, 48, 59, 61, 80, 51, 89, 55, 73, 10, 18, 57, 34, 29, 7, 38, 78, 77, 83, 11, 25, 92, 47, 54, 40]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_1 = random.sample(range(100), k=80)\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "{2, 3, 4, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 18, 19, 21, 23, 24, 25, 26, 28, 29, 30, 32, 33, 34, 37, 38, 39, 40, 42, 44, 45, 46, 47, 48, 49, 50, 51, 52, 54, 55, 57, 58, 59, 60, 61, 64, 65, 66, 67, 68, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 80, 81, 83, 84, 85, 86, 87, 88, 89, 90, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1=set(sample_list_1)\n",
+    "print(len(set1))\n",
+    "print(set1)\n"
    ]
   },
   {
@@ -77,11 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[93, 61, 9, 96, 45, 37, 10, 79, 19, 71, 46, 27, 33, 95, 24, 52, 94, 31, 72, 49, 75, 71, 24, 27, 36, 60, 40, 53, 41, 57, 89, 68, 67, 67, 15, 96, 22, 71, 29, 39, 0, 30, 91, 59, 1, 74, 83, 53, 27, 27, 94, 30, 60, 70, 60, 26, 59, 10, 19, 72, 71, 77, 72, 82, 39, 92, 81, 95, 87, 47, 18, 41, 3, 35, 45, 47, 69, 82, 86, 55]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_2 = []\n",
+    "\n",
+    "for e in range(80):\n",
+    "    sample_list_2.append(random.randint(0,100))\n",
+    "\n",
+    "print(sample_list_2)\n"
    ]
   },
   {
@@ -93,11 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set2=set(sample_list_2)\n",
+    "print(len(set2))\n"
    ]
   },
   {
@@ -109,11 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 6, 7, 8, 11, 12, 14, 16, 21, 23, 25, 28, 32, 34, 38, 42, 44, 48, 50, 51, 54, 58, 64, 65, 66, 73, 76, 78, 80, 84, 85, 88, 90, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "type(set1)\n",
+    "\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +179,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 35, 36, 72, 41, 91, 82, 53, 22, 27, 31}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set4 = set2.difference(set1)\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 9, 10, 15, 18, 19, 24, 26, 29, 30, 33, 37, 39, 40, 45, 46, 47, 49, 52, 55, 57, 59, 60, 61, 67, 68, 69, 70, 71, 74, 75, 77, 79, 81, 83, 86, 87, 89, 92, 93, 94, 95, 96}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)\n"
    ]
   },
   {
@@ -165,11 +237,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "55\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "#set 1 es un set de elementos creado a partir de una lista con elementos \n",
+    "#random que no se repiten\n",
+    "#set 2 --> elementos pueden repetirse.\n",
+    "#Por lo que;\n",
+    "len(set1)>len(set2)\n",
+    "\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "#OK\n",
+    "\n",
+    "#set 3 es la diferencia entre 1 y 2. Elementos presentes en 1 que no en 2\n",
+    "# ....\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -181,11 +279,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set6 = set()\n",
+    "print(set6)\n",
+    "type(set6)"
    ]
   },
   {
@@ -197,11 +315,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 18, 19, 21, 23, 24, 25, 26, 28, 29, 30, 32, 33, 34, 37, 38, 39, 40, 42, 44, 45, 46, 47, 48, 49, 50, 51, 52, 54, 55, 57, 58, 59, 60, 61, 64, 65, 66, 67, 68, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 80, 81, 83, 84, 85, 86, 87, 88, 89, 90, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +342,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iguales\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "if set1 == set6:\n",
+    "    print(\"Iguales\")\n",
+    "else:\n",
+    "    print(\"No\")\n"
    ]
   },
   {
@@ -229,11 +369,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "#si set2 es un subset de set1\n",
+    "print(set2.issubset(set1))\n",
+    "print(set3.issubset(set1))"
    ]
   },
   {
@@ -247,11 +398,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "union 1: {0, 1, 2, 3, 4, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 60, 61, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "union 2: {0, 1, 2, 3, 4, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 60, 61, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set3_U_set4_U_set5 = set3.union(set4,set5)\n",
+    "print(\"union 1:\" , set3_U_set4_U_set5 )\n",
+    "\n",
+    "set1_U_set2 = set2.union(set1)\n",
+    "print(\"union 2:\" , set1_U_set2)\n"
    ]
   },
   {
@@ -263,11 +427,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 18, 19, 21, 23, 24, 25, 26, 28, 29, 30, 32, 33, 34, 37, 38, 39, 40, 42, 44, 45, 46, 47, 48, 49, 50, 51, 52, 54, 55, 57, 58, 59, 60, 61, 64, 65, 66, 67, 68, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 80, 81, 83, 84, 85, 86, 87, 88, 89, 90, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(set1)\n",
+    "\n",
+    "eliminado = set1.pop()\n",
+    "print(eliminado)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -283,12 +461,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 18, 19, 21, 23, 24, 25, 26, 28, 29, 30, 32, 33, 34, 37, 38, 39, 40, 42, 44, 45, 46, 47, 48, 49, 50, 51, 52, 54, 55, 57, 58, 59, 60, 61, 64, 65, 66, 67, 68, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 80, 81, 83, 84, 85, 86, 87, 88, 89, 90, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "{1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99}\n",
+      "{99, 69, 39, 71, 9, 11, 79, 49, 81, 19, 51, 21, 61, 89, 59, 29}\n",
+      "{3, 4, 6, 7, 8, 10, 12, 14, 15, 16, 18, 23, 24, 25, 26, 28, 30, 32, 33, 34, 37, 38, 40, 42, 44, 45, 46, 47, 48, 50, 52, 54, 55, 57, 58, 60, 64, 65, 66, 67, 68, 70, 73, 74, 75, 76, 77, 78, 80, 83, 84, 85, 86, 87, 88, 90, 92, 93, 94, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "print(set1)\n",
+    "list_to_remove_set = set(list_to_remove)\n",
+    "print(list_to_remove_set)\n",
+    "\n",
+    "\n",
+    "intersection = list_to_remove_set.intersection(set1)\n",
+    "print(intersection)\n",
+    "\n",
+    "for e in intersection:\n",
+    "    set1.remove(e)\n",
+    "print(set1)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
