--- a/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
@@ -53,7 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "#extract the keys\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -190,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
